# 2D-Game-engine-in-C

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: glad.c.E5456E8F9A511086.idx  glad.h.DC1C4EFAA7DE87D5.idx  khrplatform.h.971E32A18588FDF6.idx  main.c.412F720BF86D1C38.idx
include/: util.h
src/: main.c
